# UPReader

./: .gitignore  CMakeLists.txt  GoogleReader.desktop  GoogleReader.kdev4  LICENSE  README.md  format.astylerc  qml.qrc  up-reader.desktop
debian/: changelog  control  copyright  rules
images/: images.qrc
src/: apihelper.cpp  apihelper.h  article.cpp  article.h  articlelist.cpp  articlelist.h  contentmodel.cpp  contentmodel.h  feedmodel.cpp  feedmodel.h  feedparser.cpp  feedparser.h  filteredcontentmodel.cpp  filteredcontentmodel.h  filteredfeedmodel.cpp  filteredfeedmodel.h  main.cpp  manager.cpp  manager.h  networkmanager.cpp  networkmanager.h  qgreader.cpp  qgreader.h  qmlsqlquerymodel.cpp  qmlsqlquerymodel.h  qmlsqltablemodel.cpp  qmlsqltablemodel.h  sqlhelper.cpp  sqlhelper.h  src.cmake  subscription.cpp  subscription.h  upreader.cpp  upreader.h  upreaderapp.cpp  upreaderapp.h
src/qml/: ArticleListView.qml  ArticleView.qml  ContentView.qml  ReaderView.qml  StoryDelegate.qml  SubItem.qml  SubList.qml  WaitScreen.qml  WebAuth.qml  main.qml  qml.cmake  qml.qrc
